// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`responsive and non responsive combination 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 1rem;
}

@media (min-width:0px) {
  .c0 {
    margin-left: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-left: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-left: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive margin 1`] = `
@media (min-width:0px) {
  .c0 {
    margin: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginBottom 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-bottom: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-bottom: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-bottom: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginHorizontal 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-left: 0.75rem;
    margin-right: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-left: 1rem;
    margin-right: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginLeft 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-left: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-left: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-left: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginRight 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-right: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-right: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-right: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginTop 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-top: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-top: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-top: 1rem;
  }
}

<div
  class="c0"
/>
`;

exports[`responsive marginVertical 1`] = `
@media (min-width:0px) {
  .c0 {
    margin-top: 0;
    margin-bottom: 0;
  }
}

@media (min-width:720px) {
  .c0 {
    margin-top: 0.75rem;
    margin-bottom: 0.75rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

<div
  class="c0"
/>
`;
